--- a/.theme/wysiwyg.css
+++ b/.theme/wysiwyg.css
@@ -78,3 +78,13 @@ Preview */
 .markdown-preview-view.is-readable-line-width .markdown-preview-section > div {
   width: var(--readable-line-length);
 }
+
+/*----------------------------------------------------------------
+Long tables should go underneath v-scrollbar */
+
+.CodeMirror-vscrollbar,
+.CodeMirror-hscrollbar,
+.CodeMirror-scrollbar-filler,
+.CodeMirror-gutter-filler {
+  z-index: 999;
+}
